<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.courtcounter.MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margineight"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/team_a"
                android:textColor="@color/gray"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margineight"
                android:layout_marginTop="@dimen/margineight"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="56sp"/>

            <TextView
                android:id="@+id/team_a_fouls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margineight"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="36sp"/>

            <Button
                android:id="@+id/points_3_A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margineight"
                android:layout_marginLeft="@dimen/margin24"
                android:layout_marginRight="@dimen/margin24"
                android:text="@string/points3"/>

            <Button
                android:id="@+id/points_2_A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margineight"
                android:layout_marginLeft="@dimen/margin24"
                android:layout_marginRight="@dimen/margin24"

                android:text="@string/points2"/>

            <Button
                android:id="@+id/points_1_A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margineight"
                android:layout_marginLeft="@dimen/margin24"
                android:layout_marginRight="@dimen/margin24"

                android:text="@string/free_throw"/>

            <Button
                android:id="@+id/team_a_foul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margineight"
                android:onClick="addFoulsTeamA"
                android:text="@string/fouls"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray">
        </View>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margineight"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/team_b"
                android:textColor="@color/gray"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margineight"
                android:layout_marginTop="@dimen/margineight"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="56sp"/>

            <TextView
                android:id="@+id/team_b_fouls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margineight"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="36sp"/>

            <Button
                android:id="@+id/points_3_B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margineight"
                android:layout_marginLeft="@dimen/margin24"
                android:layout_marginRight="@dimen/margin24"

                android:text="@string/points3"/>

            <Button
                android:id="@+id/points_2_B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margineight"
                android:layout_marginLeft="@dimen/margin24"
                android:layout_marginRight="@dimen/margin24"

                android:text="@string/points2"/>

            <Button
                android:id="@+id/points_1_B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margineight"
                android:layout_marginLeft="@dimen/margin24"
                android:layout_marginRight="@dimen/margin24"

                android:text="@string/free_throw"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margineight"
                android:layout_marginLeft="@dimen/margineight"
                android:onClick="addFoulsTeamB"
                android:text="@string/fouls"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="resetScores"
        android:text="@string/reset"/>

</RelativeLayout>
